testsuite/escript/classes/fail-no-ctor-04.err
fail-no-ctor-04.src:12:12: error: In call to 'Animal': No base class defines a constructor.