testsuite/escript/classes/fail-no-ctor-04.src
// No base class defines a constructor

class BaseClass1()
endclass

class BaseClass2()
endclass

class Animal( BaseClass1, BaseClass2 )
endclass

var obj := Animal();
print( obj );
